error messsage for non-existence of columns in meta
