# api/swagger_server/controllers/file_controller.py
@@ -161,7 +161,7 @@ def upload_file(editing_vocabulary=None, editing_vocabulary_meta=None, reference
                   '[Error] failed _check_synonymous_relationship',
                   location())
             return exec_res, status_code
-
+            
         # Payload make to upload to database by REST API
         payload = _make_bulk_data_editing_vocabulary(df)
 
@@ -184,7 +184,7 @@ def upload_file(editing_vocabulary=None, editing_vocabulary_meta=None, reference
 
         # read file
         df = _read_file_storage(editing_vocabulary_meta)
-        
+                
         # Check columns
         exec_res, status_code, df = _check_columns_meta(df)
         if not status_code == 200:
@@ -555,17 +555,13 @@ def _check_columns(data_frame):
 # check column meta
 def _check_columns_meta(data_frame):
     # columns = '語彙の名称 語彙の英語名称 バージョン 接頭語 語彙のURI 語彙の説明 語彙の英語説明 語彙の作成者'
-    for index, item in data_frame.iterrows():
-        # if any(map(ins_f, item)):
-        if ('語彙の名称' not in item
-         or '語彙の英語名称' not in item
-         or 'バージョン' not in item
-         or '接頭語' not in item
-         or '語彙のURI' not in item
-         or '語彙の説明' not in item
-         or '語彙の英語説明' not in item
-         or '語彙の作成者' not in item):
-            return ErrorResponse(0, 'Data Format Error. meta file columns'), 400
+    #　要求される列名
+    required_columns =['語彙の名称', '語彙の英語名称', 'バージョン', '接頭語', '語彙のURI',
+                        '語彙の説明', '語彙の英語説明', '語彙の作成者']
+    for req_col in required_columns:
+        if req_col not in data_frame.columns:
+            return CheckErrorResponse(1, [req_col], 0), 400, data_frame
+
     data_frame = data_frame[['語彙の名称', '語彙の英語名称', 'バージョン', '接頭語', '語彙のURI',
                              '語彙の説明', '語彙の英語説明', '語彙の作成者']]
     return SuccessResponse('request is success.'), 200, data_frame
